# test

./: .env.example  .gitattributes  CREDIFY_README.md  DEPLOYMENT.md  MIGRATION-TO-VERCEL.md  index.html  netlify.toml  package.json  test.html  vite.config.ts
avalanche/: .env.example  hardhat.config.js
avalanche/contracts/: EscrowUSDC.sol  VendorPass.sol
avalanche/scripts/: deploy.js  mintVendor.js
backend/: .env.example  README.md  package.json
backend/src/: index.ts
backend/src/config/: db.ts
backend/src/models/: Product.ts  Vendor.ts
backend/src/routes/: products.ts  vendors.ts
backend/src/services/: email.ts
contracts/: README.md  build.sh
credify-main/: netlify.toml  package.json  render.yaml  server.js
credify-main/backend/: .env.example
credify-main/backend/src/: index.ts
credify-main/contracts/: Cargo.toml  README.md
credify-main/contracts/src/: dispute_resolution.rs  escrow.rs  lib.rs  reputation.rs
credify-main/shared/: types.ts
public/zohoverify/: verifyforzoho.html
shared/: types.ts
src/: App.tsx  index.css
src/components/: AgeVerification.tsx  ErrorBoundary.tsx  Footer.tsx  IdentityVerification.tsx  Navigation.tsx  ProductCard.tsx  ShoppingCart.tsx  ShoppingCart.tsx.bak  WalletConnection.tsx
src/contexts/: AvalancheContext.tsx  ConcordiumContext.tsx
src/lib/: avalanche.ts  types.ts
src/pages/: AdminDashboard.tsx  AdminDashboardUpdated.tsx  AdminLogin.tsx  HomePage.tsx  MarketplacePage.tsx  OrderTracking.tsx  SellerDashboard.tsx  VendorLogin.tsx  VendorRegistration.tsx
src/utils/: exchangeRates.ts
(+9 files in other folders)
