[package]
name = "credify-contracts"
version = "0.1.0"
edition = "2021"
authors = ["CREDIFY Team"]
description = "Smart contracts for CREDIFY identity-first e-commerce platform"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
concordium-std = "10.0"
concordium-cis2 = "6.1"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
panic = "abort"